--- a/spa/package.json
+++ b/spa/package.json
@@ -10,9 +10,11 @@
     "@types/node": "^16.18.87",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
+    "sass": "^1.71.1",
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.0.15",
     "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
